log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
      containers:
        - name: writer
          image: europe-north1-docker.pkg.dev/devopswithkubernetes-509407/dwk-repo/log-output-writer:latest
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
        - name: reader
          image: europe-north1-docker.pkg.dev/devopswithkubernetes-509407/dwk-repo/log-output-reader:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
